--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read
 
 jobs:
-  main:
+  verify:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -39,6 +39,7 @@ jobs:
 
   create-tags:
     runs-on: ubuntu-latest
+    needs: 'verify'
     steps:
       - uses: actions/checkout@v4
         with:
