--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.NPM_ACCESS_TOKEN }}
+          token: ${{ secrets.PAT }}
 
       - name: Git login
         run: |
