--- a/nx.json
+++ b/nx.json
@@ -67,11 +67,6 @@
     "version": {
       "conventionalCommits": true
     },
-    "projectsRelationship": "independent",
-    "changelog": {
-      "projectChangelogs": {
-        "createRelease": "github"
-      }
-    }
+    "projectsRelationship": "independent"
   }
 }
